--- a/src/css/easyselector.css
+++ b/src/css/easyselector.css
@@ -14,12 +14,19 @@
   background-image: linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
 }
 
-.easyselector input, .easyselector-conf, .easyselector-arrow {
+.easyselector input, 
+.easyselector-conf, 
+.easyselector-arrow {
   font-family: inherit;
   font-size: inherit;
   border: none;
   padding: 0.3em;
   display: inline-block;
+}
+
+.easyselector-conf, 
+.easyselector-arrow {
+  float: right;
 }
 
 .easyselector input{
@@ -29,23 +36,28 @@
   text-overflow: ellipsis;
 }
 
+.easyselector a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .easyselector-arrow div {
-  background-image: url(https://d3oaxc4q5k2d6q.cloudfront.net/m/a649696e8dec/lib/chosen/chosen-sprite.png?25b9acb1b504);
+  background-image: url(../img/easyselector-sprite.png);
   background-position:  left top;
   width: 9px;
   display: inline-block;
   padding: 0px;
 }
 
-.easyselector .easyselector-settings {
+.easyselector-settings {
   right: -1px;
   position: absolute;
   width: auto;
   left: auto;
 }
 
-.easyselector .easyselector-settings li:hover,
-.easyselector .easyselector-settings li.selected {
+.easyselector-settings li.selected, 
+.easyselector-settings li.selected:hover {
   background: #555;
   color: #ddd;
 }
@@ -59,7 +71,6 @@
 }
 
 .easyselector ul {
-  left: -1px;
   position: absolute;
   display: none;
   list-style: none;
@@ -69,7 +80,11 @@
   overflow-y: auto;
 }
 
-.easyselector ul li {
+.easyselector-list {
+  left: -1px;
+} 
+
+.easyselector-list li {
   display: list-item;
 }
 
@@ -77,7 +92,7 @@
   background: #cfcfcf
 }
 
-.easyselector ul li.message {
+.easyselector-list li.message {
   font-weight: bold;
   font-size: 0.8em;
   padding: 0.2em;
@@ -87,11 +102,9 @@
   display: block;
   padding: 0.3em;
   padding-left: 1em;
-  text-decoration: none;
-  color: inherit;
 }
 
-.easyselector.expanded ul {
+.easyselector.expanded .easyselector-list {
   display: block;
 }
 
@@ -100,6 +113,7 @@
   display: inline-block;
 }
 
-.easyselector-conf img {
+.easyselector-conf div {
   width: 18px;
+  background: url('../img/gear.png') center no-repeat;
 }
