--- a/src/css/easyselector.css
+++ b/src/css/easyselector.css
@@ -117,9 +117,11 @@
 }
 
 .easyselector-list li:hover,
+.easyselector-list li a:focus,
 .easyselector-settings li:hover,
-.easyselector-list li a:focus {
-  background: #cfcfcf
+.easyselector-settings a:focus {
+  background: #cfcfcf;
+  color: #000;
 }
 
 .easyselector-list li.message {
