--- a/src/css/easyselector.css
+++ b/src/css/easyselector.css
@@ -82,11 +82,16 @@
   left: auto;
 }
 
-.easyselector-settings li.selected, 
-.easyselector-settings li.selected:hover,
 .easyselector-settings a:active {
-  background: #555;
+  background-color: #555;
   color: #ddd;
+}
+
+.easyselector-settings li.selected a {
+  background-image: url(../img/right_arrow.png);
+  background-repeat: no-repeat;
+  background-position: 0px;
+  background-clip: border-box;
 }
 
 .easyselector.expanded {
@@ -122,7 +127,7 @@
 .easyselector-list li a:focus,
 .easyselector-settings li:hover,
 .easyselector-settings a:focus {
-  background: #cfcfcf;
+  background-color: #cfcfcf;
   color: #000;
 }
 
