--- a/src/sass/easyselector.scss
+++ b/src/sass/easyselector.scss
@@ -94,6 +94,7 @@
     background-repeat: no-repeat;
     background-position: 0px;
     background-clip: border-box;
+    background-color: #b0b0b0;
   }
 }
 
