--- a/src/sass/easyselector.scss
+++ b/src/sass/easyselector.scss
@@ -147,6 +147,7 @@
     padding-left: 1em;
     outline: none;
     text-overflow: ellipsis;
+    white-space: nowrap;
     overflow: hidden;
   }
 }
@@ -157,6 +158,7 @@
   padding-left: 1em;
   outline: none;
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
